# vicon_calibration

./: .gitmodules  CMakeLists.txt  README.md  dependencies_install.bash  package.xml
.github/: PULL_REQUEST_TEMPLATE.md
config/: CalibrationVerification.json  CheckerboardTarget_EXAMPLE.json  CheckerboardTarget_LARGE.json  CylinderTarget.json  CylinderTarget_EXAMPLE.json  DiamondCornersTarget.json  DiamondTarget.json  DiamondTargetRobohub.json  DiamondTargetSim.json  DiamondTargetSimulation.json  DiamondTarget_EXAMPLE.json  GraphConfig.json  IsolateTargetPointsConfig.json  LidarExtractorConfig.json  OptimizerConfig.json  ViconCalibrationConfig.json  ViconCalibrationConfigCheckerboard_Camera.json  ViconCalibrationConfigCheckerboard_EXAMPLE.json  ViconCalibrationConfigCheckerboard_Lidar.json  ViconCalibrationConfigCylinder_EXAMPLE.json  ViconCalibrationConfigDiamond_EXAMPLE.json  ViconCalibrationConfigIG (copy).json  ViconCalibrationConfigIG.json  ViconCalibrationConfigIG_cylinder.json  ViconCalibrationConfigRoben (copy).json  ViconCalibrationConfigRoben.json  test_ig.json
config/Examples/: DiamondTargetLab.json  DiamondTargetSim.json  ViconCalibrationConfigIG_Cylinders.json  ViconCalibrationConfigIG_diamond.json
data/: F1.json  F1_sim.json  F2.json  F2_sim.json  F2_test.json  X1_test.json  checkerboard_template_LARGE.pcd  diamond_target_robohub.pcd  diamond_target_simulation.pcd  initial_calibration_EXAMPLE.json  initial_calibration_REAL.json  initial_calibration_ig.json  initial_calibration_ig_current.json  initial_calibration_ig_old.json  initial_calibration_roben.json  initial_calibration_test.json  intrinsics_EXAMPLE.json  intrinsics_EXAMPLE_REAL.json  test_calibration.json  test_camera.json
include/libcbdetect/: plot_boards.h  plot_corners.h
include/vicon_calibration/: Aliases.h  CalibrationVerification.h  CamCylExtractor.h  CamCylExtractorAvery.h  CameraExtractor.h  CameraFactor.h  CameraLidarFactor.h  CeresParams.h  CropBox.h  CylinderCameraExtractor.h  CylinderLidarExtractor.h  GTSAMGraph.h  JsonTools.h  LidarCylExtractor.h  LidarExtractor.h  LidarFactor.h  Log.h  OBS-LidarCylExtractor.h  Optional.h  Params.h  PclConversions.h  TfTree.h  Utils.h  ViconCalibrator.h  Visualizer.h  gflags.h  params.h  utils.h  utils.hpp
include/vicon_calibration/camera_models/: CameraModel.h  CameraModels.h  Cataditropic.h  DoubleSphere.h  KannalaBrandt.h  Radtan.h
include/vicon_calibration/gtsam/: CameraFactor.h  CameraLidarFactor.h  Graph.h  LidarFactor.h
include/vicon_calibration/measurement_extractors/: CameraExtractor.h  CameraExtractors.h  CheckerboardCameraExtractor.h  CheckerboardCornersLidarExtractor.h  CheckerboardLidarExtractor.h  CylinderCameraExtractor.h  CylinderLidarExtractor.h  DiamondCameraExtractor.h  DiamondCornersLidarExtractor.h  DiamondLidarExtractor.h  IsolateTargetPoints.h  LidarExtractor.h  LidarExtractors.h  MeasurementExtractors.h
include/vicon_calibration/optimization/: CeresCameraCostFunction.h  CeresLidarCostFunction.h  CeresOptimizer.h  GtsamCameraFactor.h  GtsamCameraFactorInv.h  GtsamCameraLidarFactor.h  GtsamLidarFactor.h  GtsamOptimizer.h  Optimizer.h
src/: ViconCalibrator.cpp  main.cpp  main_ig.cpp  main_roben.cpp
src/lib/: CMakeLists.txt  CalibrationVerification.cpp  CamCylExtractor.cpp  CamCylExtractorAvery.cpp  CameraExtractor.cpp  CropBox.cpp  CylinderCameraExtractor.cpp  CylinderLidarExtractor.cpp  GTSAMGraph.cpp  Gflags.cpp  JsonTools.cpp  LidarCylExtractor.cpp  LidarExtractor.cpp  OBS-LidarCylExtractor.cpp  TfTree.cpp  Utils.cpp  ViconCalibrator.cpp  Visualizer.cpp  gflags.cpp  utils.cpp
src/lib/camera_models/: CameraModel.cpp  Cataditropic.cpp  DoubleSphere.cpp  KannalaBrandt.cpp  Radtan.cpp
src/lib/gtsam/: Graph.cpp
src/lib/libcbdetect/: find_corners.cc  plot_boards.cc  plot_corners.cc
src/lib/measurement_extractors/: CameraExtractor.cpp  CheckerboardCameraExtractor.cpp  CheckerboardCornersLidarExtractor.cpp  CheckerboardLidarExtractor.cpp  CylinderCameraExtractor.cpp  CylinderLidarExtractor.cpp  DiamondCameraExtractor.cpp  DiamondCornersLidarExtractor.cpp  DiamondLidarExtractor.cpp  IsolateTargetPoints.cpp  LidarExtractor.cpp
src/lib/optimization/: CeresOptimizer.cpp  GtsamOptimizer.cpp  Optimizer.cpp
src/tools/: generate_checkerboard_keypoints.cpp  generate_checkerboard_target.py  generate_checkerboard_template.cpp  generate_diamond_target.py
tests/: CMakeLists.txt  cam_cyl_extract_tests.cpp  cam_cyl_extract_tests2.cpp  ceres_camera_tests.cpp  ceres_lidar_tests.cpp  checkerboard_camera_extractor_test.cpp  checkerboard_lidar_extractor_test.cpp  cyl_extract_main.cpp  cylinder_camera_extractor_test.cpp  cylinder_lidar_extractor_test.cpp  diamond_camera_extractor_test.cpp  diamond_lidar_extractor_test (copy).cpp  diamond_lidar_extractor_test.cpp  gtsam_factors_test.cpp  lidar_cyl_extract_test.cpp  optimizer_tests.cpp  test.cpp  test.json
tests/calibration/: roben_extrinsic.json  roben_extrinsics.json
tests/data/: CamFactorIntrinsics.json  CheckerboardTargetSim.json  CylinderTarget.json  DiamondTargetSim.json  F1_sim.json  OptimizerConfig.json  roben_extrinsics.json
tests/template_clouds/: checkerboard_target_simulation.pcd  cylinder_target_rotated.pcd
tests/template_pointclouds/: target_cloud_0002.pcd
